# egads

./: .gitignore  INSTALL.txt  LICENSE.txt  MANIFEST.in  PKG-INFO  README.md  run_tests.py  setup.cfg  setup.py
Documentation/: changelog.txt
Documentation/EGADS Algorithm Handbook - LATEX/: EGADS_alg_doc.idx  EGADS_alg_doc.out  EGADS_alg_doc.tex  EGADS_alg_doc.toc  example.py  pagesetup.cfg
doc/: Makefile  changelog.txt  make.bat
doc/EGADS Algorithm Handbook - LATEX/: EGADS_alg_doc.tex  example.py  fancyvrb.cfg
doc/source/: alg_development.rst  algorithm_template.py  conf.py  egadsapi.rst  example.py  index.rst  install.rst  intro.rst  temp_static_cnrm.tex  tutorial-csv.inc  tutorial-end.inc  tutorial-global.rst  tutorial-hdf.inc  tutorial-nasaames.inc  tutorial-netcdf.inc  tutorial-raw.inc  tutorial.rst
doc/source/example_files/: example.py  (+6 more)
egads/: __init__.py  _version.py  egads.ini  egads_log.out  test_var
egads.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
egads/algorithms/: __init__.py  algorithm_template.py
egads/core/: __init__.py  egads_core.py  egads_update.py  metadata.py
egads/input/: __init__.py  hdf_io.py  input_core.py  nasa_ames_io.py  nasa_ames_io_2.py  netcdf_io.py  text_file_io.py
egads/tests/: __init__.py  algorithm_module_tests.py  corrections_mathematics_transforms_tests.py  egads_tests.py  input_tests.py  metadata_tests.py  microphysics_tests.py  radiation_tests.py  test_all.py  thermodynamics_tests.py
egads/utils/: egads_utils.py
egads_lineage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+252 files in other folders)
