[sdist]
formats = zip,gztar

[bdist_rpm]
packager = "Olivier Henry <olivier.henry@meteo.fr>"

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/EGADS Documentation - SPHINX/source
build-dir = doc/EGADS Documentation - SPHINX/build
all_files = 1

[upload_sphinx]
upload-dir = doc/EGADS Documentation - SPHINX/build/html

[metadata]
description-file = README.md

